# cub3d

./: CMakeLists.txt  Makefile  cub3d  cub3d.c  cub3d.h  ft_create_bitmap.c  ft_draw_sprite.c  ft_draw_world.c  ft_init_struct.c  ft_replace_frame.c  ft_sprite_list.c  ft_sprite_list_1.c  ft_sprite_list_2.c  ft_trace.c  ft_trace.h  map1.cub  parce_map_file.c  start.sh
includes/: cub3d.h  ft_trace.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_check_file_extension.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isdigit_from_string.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+9 more)
maps/: map.cub  map1.cub
srcs/: cub3d.c  ft_create_bitmap.c  ft_draw_sprite.c  ft_draw_world.c  ft_free_all_struct.c  ft_init_struct.c  ft_key_press.c  ft_lst_in_map.c  ft_parce_map_file.c  ft_parce_map_file_1.c  ft_parce_map_file_2.c  ft_parce_map_file_3.c  ft_parce_map_file_4.c  ft_replace_frame.c  ft_sprite_list_1.c  ft_sprite_list_2.c  ft_trace.c  ft_utils.c  ft_utils_2.c  parce_map_file.c
texture_xpm/: 1111.xpm  chalice.xpm  chest.xpm  sprite.xpm
