cmake_minimum_required(VERSION 3.16)
project(debug_cub3d)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(cmake-build-debug)
include_directories(includes)
include_directories(libft)
include_directories(maps)
include_directories(mlx)
include_directories(srcs)
include_directories(texture_bmp)
include_directories(texture_xpm)

add_executable(debug_cub3d
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/cub3d.cbp
        cmake-build-debug/Makefile
        includes/cub3d.h
        includes/ft_trace.h
        maps/map1.cub
        mlx/man/man3/mlx.3
        mlx/man/man3/mlx_loop.3
        mlx/man/man3/mlx_new_image.3
        mlx/man/man3/mlx_new_window.3
        mlx/man/man3/mlx_pixel_put.3
        mlx/font.c
        mlx/interface.o
        mlx/interface.swift
        mlx/libmlx.dylib
        mlx/Makefile
        mlx/mlx.h
        mlx/mlx_image.o
        mlx/mlx_image.swift
        mlx/mlx_image.swiftdoc
        mlx/mlx_image.swiftmodule
        mlx/mlx_init.o
        mlx/mlx_init.swift
        mlx/mlx_init.swiftdoc
        mlx/mlx_init.swiftmodule
        mlx/mlx_png.c
        mlx/mlx_png.o
        mlx/mlx_rgb.c
        mlx/mlx_string_put.c
        mlx/mlx_string_put.o
        mlx/mlx_window.o
        mlx/mlx_window.swift
        mlx/mlx_window.swiftdoc
        mlx/mlx_window.swiftmodule
        mlx/mlx_xpm.c
        mlx/mlx_xpm.o
        srcs/cub3d.c
        srcs/ft_create_bitmap.c
        srcs/ft_draw_sprite.c
        srcs/ft_draw_world.c
        srcs/ft_init_struct.c
        srcs/ft_key_press.c
        srcs/ft_lst_in_map.c
        srcs/ft_parce_map_file.c
        srcs/ft_replace_frame.c
        srcs/ft_sprite_list_1.c
        srcs/ft_sprite_list_2.c
        srcs/ft_trace.c
        srcs/ft_utils.c
        texture_bmp/sprite.png
        texture_bmp/WALL1.bmp
        texture_bmp/WALL32.bmp
        texture_bmp/WALL71.bmp
        texture_bmp/WALL74.bmp
        texture_bmp/WALL76.bmp
        texture_bmp/WALL77.bmp
        texture_bmp/WALL82.bmp
        texture_bmp/WALL83.bmp
        texture_xpm/1111.xpm
        texture_xpm/pngwing.com.xpm
        texture_xpm/sprite.xpm
        texture_xpm/WALL1.xpm
        texture_xpm/WALL32.xpm
        texture_xpm/WALL71.xpm
        texture_xpm/WALL74.xpm
        texture_xpm/WALL76.xpm
        texture_xpm/WALL77.xpm
        texture_xpm/WALL82.xpm
        texture_xpm/WALL83.xpm
        CMakeLists.txt
        Makefile
        README.md
        Screenshot.bmp
        start.sh)
